--- a/configs/nginx/nginx.ssl.conf
+++ b/configs/nginx/nginx.ssl.conf
@@ -12,7 +12,7 @@ events {
 http {
     include                                  /etc/nginx/mime.types;
     default_type                             "text/html";
-    access_log                               /data/logs/nginx/access.REPLACE_SERVER_NAME.log;
+    access_log                               /data/logs/nginx/access.default.log;
     sendfile                                 on;
     keepalive_timeout                        65;
     gzip                                     on;
@@ -24,54 +24,50 @@ http {
         listen                               REPLACE_SERVER_PORT;
         server_name                          REPLACE_SERVER_NAME;
         root                                 REPLACE_SERVER_WWW_DIR;
-        index                                index.php index.html index.cgi index.pl index.aspx index.txt index.json index.unknown.php index.default.php;
+        index                                index.php index.cgi index.pl index.aspx index.txt index.json index.html index.unknown.php index.default.php;
         add_header X-Frame-Options           "SAMEORIGIN" always;
         add_header X-XSS-Protection          "1; mode=block" always;
         add_header X-Content-Type-Options    "nosniff" always;
         add_header Referrer-Policy           "no-referrer-when-downgrade" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header Content-Security-Policy   "script-src 'self' 'unsafe-inline' 'unsafe-eval' *; frame-src 'self' *; object-src 'self'" always;
+        ssl_protocols                        TLSv1.2 TLSv1.3;
+        ssl_ciphers                          ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers            off;
+        ssl_certificate                      /etc/ssl/localhost.crt;
+        ssl_certificate_key                  /etc/ssl/localhost.key;
         proxy_intercept_errors               off;
 
-        location = /favicon.ico {                                                                                                                        
-            alias                            /usr/local/share/wwwroot/favicon.ico;                                                                   
-            log_not_found                    off;                                                                                                        
-            access_log                       off;                                                                                                        
-        }                                                                                                                                                
-
-        location = /robots.txt {                                                                                                                         
-            alias                            /usr/local/share/wwwroot/robots.txt;                                                                    
-            allow                            all;                                                                                              
-            log_not_found                    off;                                                                                              
-            access_log                       off;                                                                                              
-        }                                                                                                                                      
-
         location ^~ /.well-known {
-            default_type                      "text/plain";
-            root                              /usr/local/share/wwwroot/.well-known;
+            default_type "text/plain";
+            root                              REPLACE_SERVER_WWW_DIR/.well-known;
+        }
+
+        location ^~ = /favicon.ico {
+            log_not_found                    off;
+            access_log                       off;
+        }
+
+        location ^~ = /robots.txt {
+            allow                            all;
+            log_not_found                    off;
+            access_log                       off;
         }
 
         location ^~ /health {
-            default_type                     "text/plain";
+            default_type text/html;
             allow                            all;
             access_log                       off;
-            root                             /usr/local/share/wwwroot/health;
+            return                           200 'OK';
         }
 
-        location ^~ /health/txt {
-            default_type application/json;
-            allow                            all;
-            access_log                       off;
-            return                           200 'ok';
-        }        
-        
         location ^~ /health/json {
             default_type application/json;
             allow                            all;
             access_log                       off;
             return                           200 '{"status":"OK"}';
         }
-
+        
         location ^~ /health/status {
             stub_status;
         }
