--- a/configs/nginx/vhosts.d/default.conf.sample
+++ b/configs/nginx/vhosts.d/default.conf.sample
@@ -1,8 +1,8 @@
     server {
         listen                               REPLACE_SERVER_PORT;
         server_name                          REPLACE_SERVER_NAME;
-        root                                 REPLACE_SERVER_DIR;
-        index                                index.php index.cgi index.pl index.aspx awstats.pl index.txt index.json index.html index.unknown.php index.default.php;
+        root                                 REPLACE_SERVER_WWW_DIR;
+        index                                index.php index.cgi index.pl index.aspx index.txt index.json index.html index.unknown.php index.default.php;
         proxy_intercept_errors               off;
         add_header X-Frame-Options           "SAMEORIGIN" always;
         add_header X-XSS-Protection          "1; mode=block" always;
