--- a/configs/nginx/vhosts.d/default.ssl.sample
+++ b/configs/nginx/vhosts.d/default.ssl.sample
@@ -1,7 +1,7 @@
     server {
-        listen                               REPLACE_SERVER_PORT ssl http2 default_server;
+        listen                               ssl http2 REPLACE_SERVER_PORT;
         server_name                          REPLACE_SERVER_NAME;
-        root                                 REPLACE_SERVER_DIR;
+        root                                 REPLACE_SERVER_WWW_DIR;
         index                                index.php index.cgi index.pl index.aspx awstats.pl index.txt index.json index.html index.unknown.php index.default.php;
         proxy_intercept_errors               off;
         add_header X-Frame-Options           "SAMEORIGIN" always;
