--- a/configs/apache2/httpd.ssl.conf
+++ b/configs/apache2/httpd.ssl.conf
@@ -121,14 +121,14 @@ ServerName REPLACE_SERVER_NAME
 ServerAdmin REPLACE_SERVER_ADMIN
 ServerSignature On
 
-DocumentRoot "REPLACE_SERVER_DIR"
+DocumentRoot "REPLACE_SERVER_WWW_DIR"
 
 <Directory />
     AllowOverride none
     Require all denied
 </Directory>
 
-<Directory "REPLACE_SERVER_DIR">
+<Directory "REPLACE_SERVER_WWW_DIR">
     Options Indexes FollowSymLinks MultiViews ExecCGI Includes
     AllowOverride All
     Require all granted
@@ -160,12 +160,12 @@ LogLevel warn
 </IfModule>
 
 <IfModule alias_module>
-    Alias /health REPLACE_SERVER_DIR/health/index.txt
-    Alias /health/json REPLACE_SERVER_DIR/health/index.json
-    ScriptAlias /cgi-bin/ "/REPLACE_SERVER_DIR/cgi-bin/"
+    Alias /health REPLACE_SERVER_WWW_DIR/health/index.txt
+    Alias /health/json REPLACE_SERVER_WWW_DIR/health/index.json
+    ScriptAlias /cgi-bin/ "/REPLACE_SERVER_WWW_DIR/cgi-bin/"
 </IfModule>
 
-<Directory "REPLACE_SERVER_DIR/cgi-bin">
+<Directory "REPLACE_SERVER_WWW_DIR/cgi-bin">
     AllowOverride None
     Options None
     Require all granted
