--- a/configs/apache2/vhosts.d/default.conf
+++ b/configs/apache2/vhosts.d/default.conf
@@ -1,4 +1,4 @@
 # Default host 
 <VirtualHost _default_:REPLACE_SERVER_PORT>
-DocumentRoot "REPLACE_SERVER_DIR"
+DocumentRoot "REPLACE_SERVER_WWW_DIR"
 </VirtualHost>
