--- a/configs/apache2/vhosts.d/default.ssl.conf
+++ b/configs/apache2/vhosts.d/default.ssl.conf
@@ -1,7 +1,7 @@
 # Default host for SSL
 <VirtualHost _default_:REPLACE_SERVER_PORT>
 SSLEngine on
-DocumentRoot "REPLACE_SERVER_DIR"
+DocumentRoot "REPLACE_SERVER_WWW_DIR"
 SSLCertificateFile /config/ssl/server.crt
 SSLCertificateKeyFile /config/ssl/server.key
 Header always set Strict-Transport-Security "max-age=31536000; preload"
